--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
         <h1><a href="index.html">NOME</a></h1>
       </div>
 
