--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-        <a href="index.html"><h2>NOME</h2></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>NOME</h1></a>
       </div>
 
       <nav id="navbar" class="navbar">
