--- a/index.html
+++ b/index.html
@@ -112,25 +112,31 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              NOME es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. 
+              NOME es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. < /br>
+              Nuestros asesores realizan todos los trámites de <b>ciudadanía italiana</b>. < /br>
+              Ellos pueden ayudarte con lo siguiente:
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href=""></a><Documentación./h4>
+              <p class="description"> - Verificación de la documentación. < /br>
+                - Búsqueda de partidas y/o actas de nacimiento, matrimonio y defunción.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Legalizaciones</a></h4>
+              <p class="description"> - Traducción de actas por traductor público. Legalización. < /br>
+                - Legalizaciones en el Ministerio de Interior y Ministerio de Relaciones exteriores y culto.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Certificado </a></h4>
+              <p class="description"> - Obtención del certificado de Cámara Nacional Electoral (de no naturalización).
+                - Rectificación de documentación vía administrativa y judicial. </p>
+
             </div>
 
           </div>
@@ -145,12 +151,12 @@
             <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
-            <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
+            <h4>¿Quiénes pueden tener la ciudadanía italiana?</h4>
             <p>
-              Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
+            Tienen derecho a solicitar la ciudadanía italiana por nacimiento (ius sanguinis) los descendientes por línea directa de italianos (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado.
             </p>
             <p>
-              Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
+             El término "Avo" se refiere a ese antepasado Italiano y luego emigró, es decir, a la primera persona en nuestra ascendencia, y a partir de quien nosotros podemos rastrear la línea genealógica y acceder a la reconstrucción de nuestra ciudadanía italiana.
             </p>
           </div>
         </div>
