--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              NOME es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. < /br>
-              Nuestros asesores realizan todos los trámites de <b>ciudadanía italiana</b>. < /br>
+              NOME es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. <br>
+              Nuestros asesores realizan todos los trámites de <b>ciudadanía italiana</b>. <br>
               Ellos pueden ayudarte con lo siguiente:
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href=""></a><Documentación./h4>
-              <p class="description"> - Verificación de la documentación. < /br>
+              <p class="description"> - Verificación de la documentación. <br>
                 - Búsqueda de partidas y/o actas de nacimiento, matrimonio y defunción.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Legalizaciones</a></h4>
-              <p class="description"> - Traducción de actas por traductor público. Legalización. < /br>
+              <p class="description"> - Traducción de actas por traductor público. Legalización. <br>
                 - Legalizaciones en el Ministerio de Interior y Ministerio de Relaciones exteriores y culto.</p>
             </div>
 
