--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href=""></a><Documentación./h4>
+              <h4 class="title"><a href=""></a>Documentación.</h4>
               <p class="description"> - Verificación de la documentación. <br>
                 - Búsqueda de partidas y/o actas de nacimiento, matrimonio y defunción.</p>
             </div>
