--- a/index.html
+++ b/index.html
@@ -166,16 +166,11 @@
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
-            <h4>Requisiti para la Ciudadanía Italiana</h4>
-            <p> 1) Si el “Avo” es tu padre obtendrás la ciudadanía italiana por hijo directo. <br>
-            2) El caso más general, se deberá reconstruir la línea de descendencia (o de ascendencia, cadena o linaje) desde el Avo hasta el interesado. En ese caso obtendrás la ciudadanía italiana por reconstrucción.
-              La transmisión de la ciudadanía por derecho de sangre no prevé límites de generación, pero no deben existir saltos (por ejemplo ancestros que hayan renunciado a su ciudadanía italiana o la hayan perdido).
-Los casos arriba mencionados cursan por trámite administrativo ante un consulado italiano de Argentina, o bien, directamente en Italia. 
-<b>Por falta de turno</b> por parte el Consulado en Argentina, es posible el inicio de un proceso judicial en Italia. <br>
-3) Pero en el caso de que en alguna instancia la transmisión de una generación a la siguiente sea por vía materna (a través de la madre), o sea existe una mujer en la línea de descendencia cuyo marido no era italiano, hay que tener en cuenta que: <b>a)</b> Si la madre tuvo a sus hija o hijo después del 01/01/1948, la ciudadanía también se obtiene por trámite administrativo.
-<b>b)</b> En cambio, si la madre tuvo a sus hijos antes del 01/01/1948, la ciudadanía se obtiene realizando un juicio (sentencia de la Corte de Casación, 2009). <br>
-4) Finalmente podés obtener la ciudadanía italiana por matrimonio o naturalización (Ley 91/1992). Se requiere conocimiento de la lengua italiana, no inferior al nivel B1.
-</p>
+            <h4>Cittadinanza "jure sanguinis"</h4>
+            <p> Es posible obtener la Ciudadanía Italiana en Italia de forma rápida y a un bajo costo. 
+A diferencia del proceso de reconocimiento de la Ciudadania por vía Consular en Argentina que puede demorar meses e incluso varios años, el reconocimiento de la Ciudadanía en Italia puede ser obtenido en 3 meses. 
+La Ciudadanía Italiana es un derecho que poseen los descendientes de Italianos, sin límite generacional, y se denomina "Cittadinanza jure sanguinis", es decir, el derecho a obtener el Reconocimiento de la Ciudadanía Italiana por Sangre. 
+Esta guía paso a paso te guiará durante cada una de las etapas de la obtención de la Ciudadanía Italiana en Italia, incluyendo la preparación de la carpeta y cada uno de sus documentos que se necesitan, el viaje a Italia y cada uno de los pasos que debemos realizar en Italia hasta la obtención de la ciudadanía.</p>
           </div>
 
         </div>
