--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
-            <h4>Cittadinanza "jure sanguinis"</h4>
+            <h4>Ciudadanía "jure sanguinis"</h4>
             <p> Es posible obtener la Ciudadanía Italiana en Italia de forma rápida y a un bajo costo. 
 A diferencia del proceso de reconocimiento de la Ciudadania por vía Consular en Argentina que puede demorar meses e incluso varios años, el reconocimiento de la Ciudadanía en Italia puede ser obtenido en 3 meses. 
 La Ciudadanía Italiana es un derecho que poseen los descendientes de Italianos, sin límite generacional, y se denomina "Cittadinanza jure sanguinis", es decir, el derecho a obtener el Reconocimiento de la Ciudadanía Italiana por Sangre. 
