--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
             <h4>¿Quiénes pueden tener la ciudadanía italiana?</h4>
             <p>
-            Tienen derecho a solicitar la ciudadanía italiana por nacimiento (ius sanguinis) los descendientes por línea directa de italianos (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado.
+            Tienen derecho a solicitar la ciudadanía italiana por nacimiento los descendientes por línea directa de italianos (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado.
             </p>
             <p>
-             El término "Avo" se refiere a ese antepasado Italiano y luego emigró, es decir, a la primera persona en nuestra ascendencia, y a partir de quien nosotros podemos rastrear la línea genealógica y acceder a la reconstrucción de nuestra ciudadanía italiana.
+             
             </p>
           </div>
         </div>
@@ -166,6 +166,7 @@
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
+            <br>
             <h4>Ciudadanía "jure sanguinis"</h4>
             <p> Es posible obtener la Ciudadanía Italiana en Italia de forma rápida y a un bajo costo. 
 A diferencia del proceso de reconocimiento de la Ciudadania por vía Consular en Argentina que puede demorar meses e incluso varios años, el reconocimiento de la Ciudadanía en Italia puede ser obtenido en 3 meses. 
