--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>NOME</h1></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>MI LUGAR EN EL MUNDO</h1></a>
       </div>
 
       <nav id="navbar" class="navbar">
