--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <!-- Uncomment below if you prefer to use an text logo -->
         <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>MI LUGAR EN EL MUNDO</h1></a>
       </div>
 
@@ -267,37 +266,21 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>NOME</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
-            </ul>
+            <h3>MI LUGAR EN EL MUNDO</h3>
+            <p>Equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia.
+             </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contacto</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +39 3716395099<br>
+              <strong>Email:</strong> ciudadaniasiuresanguinis@gmail.com<br>
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/saretta.ascolese" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/sarettaascolese/" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
 
           </div>
