--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 
           </div>
 
-          <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
+          <div class="about-img1" data-aos="zoom-in">
             <img src="assets/img/about-img.png" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="row about-extra">
-          <div class="col-lg-6" data-aos="fade-right">
+          <div class="about-img2" data-aos="fade-right">
             <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
@@ -141,7 +141,7 @@
         </div>
 
         <div class="row about-extra">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
+          <div class="about-img3" data-aos="fade-left">
             <img src="assets/img/about-extra-2.svg" class="img-fluid" alt="">
           </div>
 
