--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="row about-extra">
           <div class="about-img2" data-aos="fade-right">
-            <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/about-img2.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
             <h4>¿Quiénes pueden tener la ciudadanía italiana?</h4>
@@ -142,7 +142,7 @@
 
         <div class="row about-extra">
           <div class="about-img3" data-aos="fade-left">
-            <img src="assets/img/about-extra-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/about-img3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
