--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
 
           <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
-            <img src="assets/img/about-img1.png" class="img-fluid" alt="">
+            <img src="assets/img/about-img.png" class="img-fluid" alt="">
           </div>
         </div>
 
