--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
 
         <header class="section-header">
           <h3>Servicios</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>Si llegaste acá es porque venís a Italia a solicitar tu ciudadanía y necesitas un lugar para vivir y fijar tu residencia mientras tramites tu ciudadanía. <br>
+            A continuación, te contamos nuestra manera de trabajar y los departamentos disponibles.</p>
         </header>
 
         <div class="row justify-content-center">
@@ -174,14 +175,26 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
             <div class="box">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Tenemos departamentos en gestión que son los que ofrecemos a través de nuestras redes <b>cuando estàn disponibles</b>.
+                <b>No realizamos busqueda de departamentos</b>, sino que ofrecemos los que tenemos en gestión. 
+                Los departamentos disponibles pueden ser reservados cuando están publicados <b>unicamente</b>, es decir, que no se realizan reservas a futuro.
+                El motivo es que no se sabe cuánto tiempo llevará el proceso de ciudadanía y por ende no se sabe cuándo se liberará.
+                Todos los departamentos ofrecidos son aptos para realizar la residencia para hacer la solicitud de tu ciudadanía.
+                Hace tu consulta.
+              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #e9bf06;"></i></div>
               <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p class="description">Realizamos el pedido en Italia del acta de tu AVO sólo si tienes los datos precisos, como el nombre y apellido, 
+                lugar (comuna) y fecha de nacimiento. No es obligatorio pero si tienes el nombre de los padres es mucho mejor.
+                Podemos pedirla en la comuna, si ya existía el registro civil, o bien podemos pedirlo a la Diócesis o Archivo Histórico si aún se registraban en las Iglesias, 
+                <b>lo importante</b> es que se deben tener todos los datos.
+                <b>Importante: no realizamos investigación</b>, es decir, que si no tienes algunos de los datos requeridos en el formulario, no podemos ayudarte.
+                También te ayudamos con el pedido de actas o certificados de Argentina. 
+              </p>
             </div>
           </div>
 
