--- a/index.html
+++ b/index.html
@@ -202,14 +202,25 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
             <div class="box">
               <div class="icon"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
               <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Es necesario que sepas, que el juicio por vía materna es procedente cuando el hijo (sea hombre o mujer) 
+                de la primera mujer que se encuentre dentro de la línea de descendencia, 
+                haya nacido antes del 1 de enero de 1948. Sólo en estos casos es necesario solicitar el reconocimiento por vía judicial. <br>
+                <b>¿Qué documentos se necesitan y cómo es el proceso?</b> <br> 
+                Para saber si tu caso es por vía judicial, para saber qué documentos son necesarios, cuánto tiempo dura el juicio, 
+                cómo es el proceso, y saber cómo hacer un Monitoreo el juicio on line en tiempo real, <b>contactanos</b> que te lo contamos en detalle.
+</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
               <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">¿Tenés que apostillar, Traducir y Visto Consular o Asseverazione para poder presentar tu carpeta en Italia y/o en Argentina? 
+                ¿Quéres saber si tu documentación es correcta? Lo más importante de todo es controlar las actas de tu carpeta para que vengas seguro y no 
+                te encuentres con problemas ya en Italia cuando la presentes en la Comuna. Te ofrecemos el Servicio de Control de Carpetas por 
+                parte del Equipo de NOME, para presentar en Italia. La revisión la hacemos en base a nuestra experiencia que son ciudadanos, 
+                podemos ayudarte a buscar soluciones y contarte casos similares al tuyo que pueden ser de gran utilidad.
+              </p>
             </div>
           </div>
 
